data/derived/comb/progs/unify/prog0691.ml.out
Characters 73-85:
  | h::t -> h :: append list2;;
                 ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'a list
